examples/test/testpolicy471.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy471
  namespace: namespace499
spec:
  podSelector:
    matchLabels:
      key22: value19
      key47: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value26
          key10: value9
          key17: value29
      podSelector:
        matchLabels:
          key22: value32
          key5: value38
          key37: value44
